<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.robochargers.ftcscoring.MainActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlack">

        <TextView
            android:id="@+id/total_score"
            android:text="@string/zero_score"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/settings_image"
            android:onClick="onOpenSettings"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_alignParentStart="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/auto_heading"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textAlignment="center"/>


            <TextView
                android:text="@string/corner_part"
                android:textStyle="bold"
                android:textAlignment="center"/>


            <RelativeLayout>
                <Button
                    android:id="@+id/auto_corner_down1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/down1"/>

                <TextView
                    android:id="@+id/auto_corner_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"/>

                <Button
                    android:id="@+id/auto_corner_up1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/up1"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <TextView
                android:text="@string/center_part"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <RelativeLayout>
                <Button
                    android:id="@+id/auto_center_down1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/down1"/>

                <TextView
                    android:id="@+id/auto_center_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"/>

                <Button
                    android:id="@+id/auto_center_up1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/up1"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <TextView
                android:text="@string/beacons"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TableRow>
                <TextView
                    android:text="@string/corner_park"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/center_park"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/cap_ball_hit"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow
                android:background="@color/colorPrimary">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/teleop_heading"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/corner_part"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/center_part"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/beacons"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/cap_ball"
                    android:textStyle="bold"/>
            </TableRow>
        </TableLayout>

    </ScrollView>

</RelativeLayout>
